# nexkosmo

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  staging_deploy.yml
app/application/: ports.py  service.py
app/domain/: belief.py  contradiction.py  enums.py  errors.py  rules.py  types.py
app/infrastructure/: auth.py  config.py  database.py  uow.py
app/interfaces/http/: main.py  problem.py
docs/: AIDEN_SCENARIO.md  ARCHITECTURE.md  EVENT_CONTRACTS.md  INVARIANT_EVIDENCE.md  REGISTRY.md  REPOSITORY_STRUCTURE.md  SECURITY.md  STOP_GATE.md
evidence/: increment1.json
migrations/: env.py
migrations/versions/: 0001_semantic_kernel.py  0002_fix_tenant_join_tables.py
scripts/: backup_restore_rehearsal.sh  bootstrap_roles.sh  bootstrap_roles.sql
tests/: test_aiden_domain.py  test_domain_invariants.py
tests/integration/: conftest.py  test_immutability.py  test_migration_and_rls.py  test_required_evidence_manifest.py
